--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "private": true,
   "scripts": {
+    "start": "node index.js",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
