--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vue-quaggajs": "^1.0.12"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
